fix: update background color in globals.css and adjust User icon color in Login component for improved visibility

--- a/igotmessage/src/app/globals.css
+++ b/igotmessage/src/app/globals.css
@@ -257,7 +257,7 @@ body {
 }
 
 .hjh{
-  background-color: #107aeb;
+  background-color: #10eb38;
 }
 
 @keyframes bar1 {
